# HPC_Parallel_Prog_OpenMP

./: CMakeLists.txt  main.cpp  parallel_toplama.c  seri_toplama.c
